# holosophos

./: Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python.yml
holosophos/: gradio_app.py  main_agent.py  server.py  settings.py  utils.py
holosophos/agents/: __init__.py  librarian.py  mle_solver.py  proposer.py  reviewer.py  writer.py
holosophos/prompts/: librarian.yaml  mle_solver.yaml  mle_solver_remote.yaml  proposer.yaml  reviewer.yaml  system.yaml  writer.yaml
holosophos/tools/: __init__.py  anthology_search.py  arxiv_download.py  arxiv_search.py  bash.py  document_qa.py  latex_conversion.py  md_to_latex.py  remote_gpu.py  text_editor.py  visit_webpage.py
other/: DockerfileMLE
reports/: run_gaia.py  run_librarian_eval.py  run_mle_solver_eval.py  run_proposer_eval.py  run_reviewer_eval.py
reports/data/: mle_solver_test.jsonl  proposer_test.jsonl
tests/: test_anthology_search.py  test_arxiv_search.py  test_latex_conversion.py  test_librarian.py  test_text_editor.py  test_visit_webpage.py
