[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holosophos"
version = "0.2.0"
description = "Holosophos Project"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "types-requests>=2.32.0",
    "xmltodict>=0.14.0",
    "pyyaml>=5.3.1",
    "types-pyyaml>=5.3.1",
    "transformers==4.47.1",
    "docker>=7.1.0",
    "fire>=0.7.0",
    "tqdm>=4.66.0",
    "types-tqdm>=4.66.0",
    "arize-phoenix-otel>=0.8.0",
    "gradio==5.29.0",
    "types-xmltodict>=0.14.0.20241009",
    "pytest>=8.4.1",
    "academia-mcp==0.0.10",
    "mle-kit-mcp==0.0.1",
    "codearkt==0.0.12",
]

[tool.flake8]
exclude = ["*/__init__.py"]
ignore = "E203,F403,E501,SIM115,PIE786,W503,E226"
max-line-length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.setuptools]
packages = ["holosophos"]
include-package-data = false

[[tool.mypy.overrides]]
module = "pydantic.*"
follow_imports = "skip"
